--- a/series/index.html
+++ b/series/index.html
@@ -26,6 +26,32 @@
 <meta property="og:url" content="https://reorx.github.io/series/" />
     <meta property="og:image" content="https://reorx.github.io/cover.png"/>
 
+<style>
+  #icons {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 2em;
+  }
+  #icons .item {
+    width: 80px;
+    height: 50px;
+    margin: 10px;
+  }
+  #icons .item .name {
+    font-size: 12px;
+    user-select: all;
+    text-align: center;
+  }
+  #icons .item .icon {
+    display: flex;
+    justify-content: center;
+  }
+  #icons .item svg {
+    width: 30px;
+    height: 30px;
+  }
+</style>
+
 
 <noscript>
     <style>
@@ -184,7 +210,7 @@ function toggleThemeListener() {
                 </a>
             </li>
             <li>
-                <a href="https://reorx.github.io/search/" title="Search"
+                <a href="https://reorx.github.io/search/" title="Search (Alt &#43; /)"data-no-instant accesskey=/
                 >Search
                 </a>
             </li>
