--- a/newsletter/index.html
+++ b/newsletter/index.html
@@ -10,12 +10,12 @@
 <meta name="description" content="This is the template for creating a newsletter in PaperModX.
 ">
 <meta name="author" content="Reorx">
-<link rel="canonical" href="https://devxpain-test.github.io/newsletter/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.min.7da7716a1f2d0725f74c6ae7f8d6adafc43aabe2b366b65bfbf433448e2a2001.css" integrity="sha256-fadxah8tByX3TGrn&#43;Natr8Q6q&#43;KzZrZb&#43;/QzRI4qIAE=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://devxpain-test.github.io/favicon.ico">
-<link rel="apple-touch-icon" href="https://devxpain-test.github.io/apple-touch-icon.png">
-<link rel="alternate" type="application/rss+xml" href="https://devxpain-test.github.io/newsletter/index.xml">
-<link rel="alternate" hreflang="en" href="https://devxpain-test.github.io/newsletter/">
+<link rel="canonical" href="https://reorx.github.io/hugo-PaperModX/newsletter/">
+<link crossorigin="anonymous" href="/hugo-PaperModX/assets/css/stylesheet.min.7da7716a1f2d0725f74c6ae7f8d6adafc43aabe2b366b65bfbf433448e2a2001.css" integrity="sha256-fadxah8tByX3TGrn&#43;Natr8Q6q&#43;KzZrZb&#43;/QzRI4qIAE=" rel="preload stylesheet" as="style">
+<link rel="icon" href="https://reorx.github.io/hugo-PaperModX/favicon.ico">
+<link rel="apple-touch-icon" href="https://reorx.github.io/hugo-PaperModX/apple-touch-icon.png">
+<link rel="alternate" type="application/rss+xml" href="https://reorx.github.io/hugo-PaperModX/newsletter/index.xml">
+<link rel="alternate" hreflang="en" href="https://reorx.github.io/hugo-PaperModX/newsletter/">
 <script async defer data-website-id="f4e3ad0a-7fc1-4f18-b08c-9be77b60cdd5" src="https://oishii.reorx.com/oishii.js"></script>
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="My Newsletter | PaperModX" />
@@ -25,8 +25,8 @@
 <meta property="og:description" content="This is the template for creating a newsletter in PaperModX.
 " />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://devxpain-test.github.io/newsletter/" />
-    <meta property="og:image" content="https://devxpain-test.github.io/cover.png"/>
+<meta property="og:url" content="https://reorx.github.io/hugo-PaperModX/newsletter/" />
+    <meta property="og:image" content="https://reorx.github.io/hugo-PaperModX/cover.png"/>
 
 
 
@@ -39,7 +39,7 @@
       "@type": "ListItem",
       "position":  1 ,
       "name": "My Newsletter",
-      "item": "https://devxpain-test.github.io/newsletter/"
+      "item": "https://reorx.github.io/hugo-PaperModX/newsletter/"
     }
   ]
 }
@@ -181,7 +181,7 @@ function toggleThemeListener() {
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://devxpain-test.github.io/" accesskey="h" title="PaperModX (Alt + H)">PaperModX</a>
+            <a href="https://reorx.github.io/hugo-PaperModX/" accesskey="h" title="PaperModX (Alt + H)">PaperModX</a>
             <span class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -207,27 +207,27 @@ function toggleThemeListener() {
         </div>
         <ul id="menu">
             <li>
-                <a href="https://devxpain-test.github.io/docs/" title="Docs"
+                <a href="https://reorx.github.io/hugo-PaperModX/docs/" title="Docs"
                 >Docs
                 </a>
             </li>
             <li>
-                <a href="https://devxpain-test.github.io/newsletter/" title="Newsletter" class="active"
+                <a href="https://reorx.github.io/hugo-PaperModX/newsletter/" title="Newsletter" class="active"
                 >Newsletter
                 </a>
             </li>
             <li>
-                <a href="https://devxpain-test.github.io/tags/" title="Tags"
+                <a href="https://reorx.github.io/hugo-PaperModX/tags/" title="Tags"
                 >Tags
                 </a>
             </li>
             <li>
-                <a href="https://devxpain-test.github.io/archives/" title="Archive"
+                <a href="https://reorx.github.io/hugo-PaperModX/archives/" title="Archive"
                 >Archive
                 </a>
             </li>
             <li>
-                <a href="https://devxpain-test.github.io/search/" title="Search (Alt &#43; /)"data-no-instant accesskey=/
+                <a href="https://reorx.github.io/hugo-PaperModX/search/" title="Search (Alt &#43; /)"data-no-instant accesskey=/
                 >Search
                 </a>
             </li>
@@ -279,7 +279,7 @@ function toggleThemeListener() {
       <div class="date">2022-09-07
       </div>
       <div class="title">
-        <a href="https://devxpain-test.github.io/newsletter/001-hello-world/">My Newsletter: Hello World
+        <a href="https://reorx.github.io/hugo-PaperModX/newsletter/001-hello-world/">My Newsletter: Hello World
         </a>
       </div>
       <div class="issueno">#001</div>
@@ -290,13 +290,13 @@ function toggleThemeListener() {
   <h2>Links</h2><div class="inline-links">
   
   
-  <span><a href="/newsletter/archives/">Archives</a></span><span><a href="https://devxpain-test.github.io/newsletter/index.xml" target="_blank">RSS</a></span></div>
+  <span><a href="/hugo-PaperModX/newsletter/archives/">Archives</a></span><span><a href="https://reorx.github.io/hugo-PaperModX/newsletter/index.xml" target="_blank">RSS</a></span></div>
 </div>
 
     </main>
     
 <footer class="footer">
-  <span>&copy; 2025 <a href="https://devxpain-test.github.io/">PaperModX</a></span><span style="display: inline-block; margin-left: 1em;">
+  <span>&copy; 2025 <a href="https://reorx.github.io/hugo-PaperModX/">PaperModX</a></span><span style="display: inline-block; margin-left: 1em;">
     <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
   </span>
   <span style="display: inline-block; margin-left: 1em;">
@@ -384,9 +384,9 @@ function toggleThemeListener() {
 
 
 
-<script src="/js/medium-zoom.min.js" data-no-instant
+<script src="/hugo-PaperModX/js/medium-zoom.min.js" data-no-instant
 ></script>
-<script src="/js/instantclick.min.js" data-no-instant
+<script src="/hugo-PaperModX/js/instantclick.min.js" data-no-instant
 ></script>
 <script data-no-instant>
   
