--- a/zh/404.html
+++ b/zh/404.html
@@ -9,12 +9,12 @@
 <meta name="keywords" content="">
 <meta name="description" content="Theme PaperModX - https://github.com/reorx/hugo-PaperModX">
 <meta name="author" content="Reorx">
-<link rel="canonical" href="https://devxpain-test.github.io/zh/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.min.7da7716a1f2d0725f74c6ae7f8d6adafc43aabe2b366b65bfbf433448e2a2001.css" integrity="sha256-fadxah8tByX3TGrn&#43;Natr8Q6q&#43;KzZrZb&#43;/QzRI4qIAE=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://devxpain-test.github.io/favicon.ico">
-<link rel="apple-touch-icon" href="https://devxpain-test.github.io/apple-touch-icon.png">
-<link rel="alternate" hreflang="en" href="https://devxpain-test.github.io/404.html">
-<link rel="alternate" hreflang="zh" href="https://devxpain-test.github.io/zh/404.html">
+<link rel="canonical" href="https://reorx.github.io/hugo-PaperModX/zh/404.html">
+<link crossorigin="anonymous" href="/hugo-PaperModX/assets/css/stylesheet.min.7da7716a1f2d0725f74c6ae7f8d6adafc43aabe2b366b65bfbf433448e2a2001.css" integrity="sha256-fadxah8tByX3TGrn&#43;Natr8Q6q&#43;KzZrZb&#43;/QzRI4qIAE=" rel="preload stylesheet" as="style">
+<link rel="icon" href="https://reorx.github.io/hugo-PaperModX/favicon.ico">
+<link rel="apple-touch-icon" href="https://reorx.github.io/hugo-PaperModX/apple-touch-icon.png">
+<link rel="alternate" hreflang="en" href="https://reorx.github.io/hugo-PaperModX/404.html">
+<link rel="alternate" hreflang="zh" href="https://reorx.github.io/hugo-PaperModX/zh/404.html">
 <script async defer data-website-id="f4e3ad0a-7fc1-4f18-b08c-9be77b60cdd5" src="https://oishii.reorx.com/oishii.js"></script>
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="404 Page not found | PaperModX" />
@@ -22,8 +22,8 @@
 <meta property="og:title" content="404 Page not found | PaperModX" />
 <meta property="og:description" content="Theme PaperModX - https://github.com/reorx/hugo-PaperModX" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://devxpain-test.github.io/zh/404.html" />
-    <meta property="og:image" content="https://devxpain-test.github.io/cover.png"/>
+<meta property="og:url" content="https://reorx.github.io/hugo-PaperModX/zh/404.html" />
+    <meta property="og:image" content="https://reorx.github.io/hugo-PaperModX/cover.png"/>
 
 <style>
   #icons {
@@ -163,7 +163,7 @@ function toggleThemeListener() {
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://devxpain-test.github.io/" accesskey="h" title="PaperModX (Alt + H)">PaperModX</a>
+            <a href="https://reorx.github.io/hugo-PaperModX/" accesskey="h" title="PaperModX (Alt + H)">PaperModX</a>
             <span class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -189,22 +189,22 @@ function toggleThemeListener() {
         </div>
         <ul id="menu">
             <li>
-                <a href="https://devxpain-test.github.io/docs/" title="文档"
+                <a href="https://reorx.github.io/hugo-PaperModX/docs/" title="文档"
                 >文档
                 </a>
             </li>
             <li>
-                <a href="https://devxpain-test.github.io/tags/" title="标签"
+                <a href="https://reorx.github.io/hugo-PaperModX/tags/" title="标签"
                 >标签
                 </a>
             </li>
             <li>
-                <a href="https://devxpain-test.github.io/archives/" title="归档"
+                <a href="https://reorx.github.io/hugo-PaperModX/archives/" title="归档"
                 >归档
                 </a>
             </li>
             <li>
-                <a href="https://devxpain-test.github.io/search/" title="搜索"
+                <a href="https://reorx.github.io/hugo-PaperModX/search/" title="搜索"
                 >搜索
                 </a>
             </li>
@@ -227,7 +227,7 @@ function toggleThemeListener() {
     </main>
     
 <footer class="footer">
-  <span>&copy; 2025 <a href="https://devxpain-test.github.io/">PaperModX</a></span><span style="display: inline-block; margin-left: 1em;">
+  <span>&copy; 2025 <a href="https://reorx.github.io/hugo-PaperModX/">PaperModX</a></span><span style="display: inline-block; margin-left: 1em;">
     <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
   </span>
   <span style="display: inline-block; margin-left: 1em;">
@@ -315,9 +315,9 @@ function toggleThemeListener() {
 
 
 
-<script src="/js/medium-zoom.min.js" data-no-instant
+<script src="/hugo-PaperModX/js/medium-zoom.min.js" data-no-instant
 ></script>
-<script src="/js/instantclick.min.js" data-no-instant
+<script src="/hugo-PaperModX/js/instantclick.min.js" data-no-instant
 ></script>
 <script data-no-instant>
   
